--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
   <head>
     <title>Bubble Popper</title>
+    <link rel="stylesheet" type="text/css" href="./lib/bubblePopper.css">
   </head>
 
   <body>
-    <canvas></canvas>
+    <h1 class='section'>Bubble Popper</h1>
+
+    <div class='gameView'>
+      <div class='canvasContainer'>
+        <canvas></canvas>
+      </div>
+      <div class='gameInfo'>
+        
+      </div>
+    </div>
 
     <!-- <script type="application/javascript" src="vendor/keymaster.js"></script> -->
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script type="application/javascript" src="lib/bundle.js"></script>
   </body>
 </html>
