add background image

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <!-- <script type="application/javascript" src="vendor/keymaster.js"></script> -->
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script type="application/javascript" src="lib/bundle.js"></script>
+    <div style="display:none;">
+      <img id="backgroundImage" src="http://res.cloudinary.com/dv3sv2ktp/image/upload/v1463624519/jeoo8bnhdtmuegxajsoz.jpg"/>
+    </div>
   </body>
 </html>
