add background image and style app

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Bubble Popper</title>
     <link rel="stylesheet" type="text/css" href="./lib/bubblePopper.css">
+    <link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
@@ -21,6 +22,9 @@
     <script type="application/javascript" src="lib/bundle.js"></script>
     <div style="display:none;">
       <img id="backgroundImage" src="http://res.cloudinary.com/dv3sv2ktp/image/upload/v1463624519/jeoo8bnhdtmuegxajsoz.jpg"/>
+      <img id="backgroundImage2" src="http://il9.picdn.net/shutterstock/videos/11381219/thumb/1.jpg"/>
+      <img id="backgroundImage3" src="http://www.pd4pic.com/images800_/-cloud-blue-white-cartoon-clouds-sky-free-nature.png"/>
+      <img id="backgroundImage4" src="https://image.freepik.com/free-vector/natural-landscape-cartoon_23-2147499451.jpg"/>
     </div>
   </body>
 </html>
